<resources>
    <string name="app_name">নামাজের সময় ও সূরা</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fozor">ফযর (فجر)</string>
    <string name="sunrise">সূর্যোদয়</string>
    <string name="zohor">যুহর (ظهر)</string>
    <string name="achor">আসর (عصر)</string>
    <string name="magrib">মাগরিব (مغرب)</string>
    <string name="esha">ইশা (عشاء)</string>
    <string name="rozar_somay_somuho">রোজার সময়সূচি ২০১৯</string>
    <string name="kalima_somuho">কালিমা সমূহ</string>
    <string name="namazer_sura_somuho">নামাজের প্রয়োজনীয় সূরা সমূহ</string>
    <string name="name_99">আল্লাহ্‌র গুণবাচক নাম </string>
    <string name="tasbi">তাসবিহ </string>
    <string name="hadis">গুরুত্বপূর্ণ কিছু হাদিস</string>
    <string name="kalemai_taiyeba"> কালিমায়ে তাইয়্যেবা </string>
    <string name="kalimay_shahadat"> কালিমায়ে শাহাদাত </string>
    <string name="kalimay_tauhid"> কালিমায়ে তাওহীদ </string>
    <string name="kalimay_tamjid"> কালিমায়ে তামযীদ </string>
    <string name="kalimay_astagfer"> কালেমা-ই-আস্তাগফের </string>
    <string name="kalimay_kufur">  কালেমা-ই-রুদ-ই-কুফর </string>
    <string name="hadith_siam">সিয়াম</string>
    <string name="hadith_salat">সালাত</string>
    <string name="hadith_iman">ঈমান</string>
    <string name="hadith_hazz">হজ্জ</string>
    <string name="hadith_jakat">যাকাত</string>
    <string name="kalemai_taiyeba_arbi">لآ اِلَهَ اِلّا اللّهُ مُحَمَّدٌ رَسُوُل اللّهِ </string>
    <string name="kalemai_taiyeba_uccharon">উচ্চারণ : লা ইলাহা ইল্লাল্লাহু মুহাম্মাদুর রাসূলুল্লাহ |</string>
    <string name="kalemai_taiyeba_ortho"> অর্থ : আল্লাহ ছাড়া কোন মা’বুদ নাই, মুহাম্মাদ (স.) আল্লাহর রাসুল। </string>
    <string name="kalimay_shahadat_arbi">اشْهَدُ انْ لّآ اِلهَ اِلَّا اللّهُ وَحْدَه لَا شَرِيْكَ لَه، وَ اَشْهَدُ اَنَّ مُحَمَّدً اعَبْدُهوَرَسُولُه</string>
    <string name="kalimay_shahadat_ucharon">উচ্চারণ : আশহাদু আন লা ইলাহা ইল্লাল্লাহু ওয়াহদাহু লা শারীকা লাহু ওয়াশহাদু আন্না মুহাম্মাদান আবদুহু ওয়ারাসুলূহু</string>
    <string name="kalimay_shahadat_ortho">অর্থ : আমি সাক্ষ্য দিচ্ছি যে, আল্লাহ ছাড়া কোন ইলাহ নেই, তার কোন অংশীদার নেই। আমি আরও সাক্ষ্য দিচ্ছি যে, মুহাম্মাদ (স.) আল্লাহর প্রেরিত রাসুল। </string>
    <string name="kalimay_tauhid_arabic">لَآ اِلٰهَ اِلَّا اللهُ وَحْدَهٗ لَا شَرِيْكَ لَهٗ لَهُ الْمُلْكُ وَ لَهُ الْحَمْدُ يُحْىٖ وَ يُمِيْتُ وَ هُوَحَیٌّ لَّا يَمُوْتُ اَبَدًا اَبَدًاؕ ذُو الْجَلَالِ وَالْاِكْرَامِؕ بِيَدِهِ الْخَيْرُؕ وَهُوَ عَلٰى كُلِّ شیْ ٍٔ قَدِیْرٌؕ‎ </string>
    <string name="kalimay_tauhid_uccharon">উচ্চারণ :  লা-ইলাহা ইল্লাল্লাহু ওয়াহ্ দাহু লা-সারিকা লা-হু লাহুল মুলকু ওয়া লাহুল হামদু ইউহা ই ওয়া উ মিতু বি ইয়া সি হিল খাইরু ওয়া-হু-ওয়া আ-লা কুল্লি শাইয়িন ক্বাদীর।</string>
    <string name="kalimay_tauhid_ortho">অর্থ : আল্লাহ এক আর কোন মাবুদ নেই তিনি এক তার কোন অংশীদার নেই। সমস্ত সৃষ্টি জগৎ এবং সকল প্রশংসা তাঁরই। তিনি জীবন দান করেন আবার তিনিই মৃত্যুর কারণ তার হাতেই সব ভাল কিছু এবং তিনিই সৃষ্টির সবকিছুর উপর ক্ষমতাবান। </string>
    <string name="kalimay_tamjid_arabic">سُبْحَان اللهِ وَالْحَمْدُلِلّهِ وَلا إِلهَ إِلّااللّهُ وَاللّهُ أكْبَرُ وَلا حَوْلَ وَلاَ قُوَّةَ إِلَّا بِاللّهِ الْعَلِيِّ الْعَظِيْم‎</string>
    <string name="kalimay_tamjid_uccharon"> উচ্চারণ : সুব্হানাল্লাহি ওয়াল হামদুলিল্লাহি ওয়া লা-ইলাহা ইল্লাল্লাহু ওয়াল্লাহু আক্বার ওয়ালা হাওলা ক্বুয়াতা ইল্লা বিল্লাহিল্ আলিইল্ আযীম্।  </string>
    <string name="kalimay_tamjid_ortho">অর্থ :  মহিমা ও সকল প্রসংশা আল্লাহ্র জন্য, আল্লাহ ব্যতীত আর কোন উপাস্য নেই। আল্লাহ মহান, সর্বশক্তিমান ও সর্বক্ষমতাবান। আল্লাহ ব্যতীত আর কেউ নয়। তিনিই মহান। </string>
    <string name="kalimay_astagfer_arabic">اَسْتَغْفِرُ اللهِ رَبِّىْ مِنْ كُلِِّ ذَنْۢبٍ اَذْنَبْتُهٗ عَمَدًا اَوْ خَطَا ًٔ سِرًّا اَوْ عَلَانِيَةً وَّاَتُوْبُ اِلَيْهِ مِنَ الذَّنْۢبِ الَّذِیْٓ اَعْلَمُ وَ مِنَ الذَّنْۢبِ الَّذِىْ لَآ اَعْلَمُ اِنَّكَ اَنْتَ عَلَّامُ الْغُيُوْبِ وَ سَتَّارُ الْعُيُوْبِ و َغَفَّارُ الذُّنُوْبِ وَ لَا حَوْلَ وَلَا قُوَّةَ اِلَّا بِاللهِ الْعَلِىِِّ الْعَظِيْمِؕ‎</string>
    <string name="kalimay_astagfer_uccharon"> উচ্চারণ : আস্তাগফিরুল্লাহা রাব্বি মিন কুল্লি জামবি আয নাবতুহু আমাদান আওখাতাআন সিররান আওয়ালা নিয়াতান ওয়াতুবু ইলাইহি মিনাযযামবিল্লাজি ওয়ামিনাযযামবিল্লাজি লা আলামু ইন্নাকা আনতা আল্লামুল গুয়ুবী ওয়া সাত্তারুল উইয়ুবী ওয়া গাফফারুজজুনুবি ওয়ালা হাওলা ওয়ালা কুয়াতা ইল্লা বিল্লাহিল আলিউল আযীম।</string>
    <string name="kalimay_astagfer_ortho"> অর্থ : আমি আল্লাহ্‌র কাছে ক্ষমা চাই সকল পাপ থেকে, যা আমি সংঘটিত করেছি আমার জ্ঞাতসারে অথবা অজ্ঞাতসারে, গোপনে বা প্রকাশ্যে এবং আমি আমার পালনকর্তার আশ্রয় চাই সেই পাপ থেকে, যে পাপ আমি জানি এবং যে পাপ আমি জানিনা। অবশ্যই আপনি লুকানো এবং গোপন (ভুল) পাপ সম্পর্কে জানেন এবং ক্ষমাশীল। আল্লাহ্‌ ছাড়া কোন শক্তি নেই, কোন ক্ষমতা নেই, তিনি সম্মানিত, তিনি মহান। </string>
    <string name="kalimay_kufur_arabic">اَللّٰهُمَّ اِنِّیْٓ اَعُوْذُ بِكَ مِنْ اَنْ اُشْرِكَ بِكَ شَيْئًا وَّاَنَآ اَعْلَمُ بِهٖ وَ اَسْتَغْفِرُكَ لِمَا لَآ اَعْلَمُ بِهٖ تُبْتُ عَنْهُ وَ تَبَرَّأْتُ مِنَ الْكُفْرِ وَ الشِّرْكِ وَ الْكِذْبِ وَ الْغِيْبَةِ وَ الْبِدْعَةِ وَ النَّمِيْمَةِ وَ الْفَوَاحِشِ وَ الْبُهْتَانِ وَ الْمَعَاصِىْ كُلِِّهَا وَ اَسْلَمْتُ وَ اَقُوْلُ لَآ اِلٰهَ اِلَّا اللهُ مُحَمَّدٌ رَّسُوْلُ اللهِؕ‎</string>
    <string name="kalimay_kufur_uccharon"> উচ্চারণ : - আল্লাহুম্মা ইন্নি আউযুবিকা মিন উশরিকা বিকা শাইআও ওয়ানা আলামু বিহি ওয়াস্তাগফিরুকা লিমালা আলামু বিহি তুবতু আনহু ওয়া তাবাররাতু মিনাল-কুফরি ওয়াশ-শিরকী ওয়াল-কিজবি ওয়ালা-গিবাতি ওয়াল-বিদাতি ওয়ান্না-মিমাতি ওয়াল-ফাওয়া হিমি ওয়াল-রুহতানী ওয়াল-মাআসি কুল্লিহা ওয়াসলামতু ওয়াকুলু লা ইলাহা ইল্লাল্লাহু মুহাম্মাদুর রাসুলুল্লাহ (সাঃ) </string>
    <string name="kalimay_kufur_ortho">  অর্থ : হে আল্লাহ্‌ নিশ্চয়, ক্ষমা চাই শিরক করা থেকে (আল্লাহ্‌র সাথে কাউকে শরিক করা), আমি ক্ষমা চাই সকল পাপ থেকে যা সম্পর্কে আমি সচেতন নই বা জানি না, আমি পুনরায় ঘোষণা করছি, আমি সকল প্রকার কুফর থেকে, শিরক থেকে, মিথ্যা (কথা বলা), গীবত, বিদাত, পরনিন্দা, অশ্লীলতা এবং অন্যান্য সকল পাপ থেকে মুক্ত। আমি ইসলাম স্বীকার এবং বিশ্বাস করি এবং ঘোষণা দিচ্ছি যে, আল্লাহ্‌ ছাড়া কোন প্রভু নেই এবং মুহাম্মদ (সাঃ) আল্লাহ্‌র প্রেরিত রাসুল।</string>
    <string name="sura_al_fatha">সূরা আল ফাতিহা - Surah Al-Fatihah</string>
    <string name="sura_al_nas">সূরা নাস - Surah Al-Nas</string>
    <string name="sura_falak">সূরা ফালাক্ব - Surah Al-Falaq</string>
    <string name="sura_ekhlas"> সূরা এখলাছ - Surah Al-Ikhlas</string>
    <string name="sura_lahab">সূরা লাহাব - Surah Al-Lahab</string>
    <string name="sura_kafirun">সূরা কাফিরুন - Surah Al-Kafirun</string>
    <string name="sura_maun">সূরা মাউন - Surah Al-Maun</string>
    <string name="sura_ziljhal">সূরা যিলযাল - Surah Al-Zalzalah</string>
    <string name="sura_fiel">সূরা ফীল - Surah Al-Fil</string>
    <string name="sura_nosor"> সূরা নছর - Surah An-Nasr </string>
    <string name="sura_kausar">সূরা কাওসার - Surah Al-Kauthar </string>
    <string name="sura_korais">সূরা কোরাইশ - Surah Quraish </string>
    <string name="sura_kador">সূরা কদর - Surah Al-Qadr </string>
    <string name="quran_webView">সম্পূর্ণ কোরআন (ইন্টারনেট প্রয়োজন)</string>
    <string-array name="sura_fateha_aiyat">
        <item> 1) بِسْمِ اللّهِ الرَّحْمـَنِ الرَّحِيمِ</item>
        <item>2) الْحَمْدُ للّهِ رَبِّ الْعَالَمِينَ</item>
        <item>3) الرَّحْمـنِ الرَّحِيمِ</item>
        <item>4) مَـالِكِ يَوْمِ الدِّينِ</item>
        <item>5) إِيَّاكَ نَعْبُدُ وإِيَّاكَ نَسْتَعِينُ</item>
        <item>6) اهدِنَــــا الصِّرَاطَ المُستَقِيمَ</item>
        <item>7) صِرَاطَ الَّذِينَ أَنعَمتَ عَلَيهِمْ غَيرِ المَغضُوبِ عَلَيهِمْ وَلاَ الضَّالِّينَ</item>
    </string-array>
    <string-array name="sura_fatiha_english_ortho">
        <item>In the name of Allah, Most Gracious, Most Merciful.</item>
        <item>Praise be to Allah, the Cherisher and Sustainer of the worlds;</item>
        <item>Most Gracious, Most Merciful;</item>
        <item>	Master of the Day of Judgment.</item>
        <item>	Thee do we worship, and Thine aid we seek.</item>
        <item>Show us the straight way,</item>
        <item>The way of those on whom Thou hast bestowed Thy Grace, those whose (portion) is not wrath, and who go not astray.</item>
    </string-array>
    <string-array name="sura_fatiha_bangla_ortho">
        <item>শুরু করছি আল্লাহর নামে যিনি পরম করুণাময়, অতি দয়ালু।</item>
        <item>যাবতীয় প্রশংসা আল্লাহ তা’আলার যিনি সকল সৃষ্টি জগতের পালনকর্তা।</item>
        <item>যিনি নিতান্ত মেহেরবান ও দয়ালু।</item>
        <item>যিনি বিচার দিনের মালিক।</item>
        <item>আমরা একমাত্র তোমারই ইবাদত করি এবং শুধুমাত্র তোমারই সাহায্য প্রার্থনা করি।</item>
        <item>আমাদেরকে সরল পথ দেখাও,</item>
        <item>সে সমস্ত লোকের পথ, যাদেরকে তুমি নেয়ামত দান করেছ। তাদের পথ নয়, যাদের প্রতি তোমার গজব নাযিল হয়েছে এবং যারা পথভ্রষ্ট হয়েছে।</item>
    </string-array>
    <string-array name="sura_nas_aiyat">
        <item> (1)  قُلْ أَعُوذُ بِرَبِّ النَّاسِ   </item>
        <item> (2)  مَلِكِ النَّاسِ   </item>
        <item> (3)  إِلَهِ النَّاسِ   </item>
        <item> (4)  مِن شَرِّ الْوَسْوَاسِ الْخَنَّاسِ   </item>
        <item> (5)  الَّذِي يُوَسْوِسُ فِي صُدُورِ النَّاسِ   </item>
        <item> (6)  مِنَ الْجِنَّةِ وَ النَّاسِ    </item>
    </string-array>
    <string-array name="sura_nas_english">
        <item> Say: I seek refuge with the Lord and Cherisher of Mankind,   </item>
        <item> The King (or Ruler) of Mankind,</item>
        <item>The Allah (for judge) of Mankind,</item>
        <item>From the mischief of the Whisperer (of Evil), who withdraws (after his whisper),</item>
        <item>(The same) who whispers into the hearts of Mankind,</item>
        <item>Among Jinns and among men.</item>
    </string-array>
    <string-array name="sura_nas_bangla">
        <item>বলুন, আমি আশ্রয় গ্রহণ করিতেছি মানুষের পালনকর্তার,</item>
        <item>মানুষের অধিপতির,</item>
        <item>মানুষের মা’বুদের</item>
        <item>তার অনিষ্ট থেকে, যে কুমন্ত্রণা দেয় ও আত্নগোপন করে,</item>
        <item>যে কুমন্ত্রণা দেয় মানুষের অন্তরে</item>
        <item>জ্বিনের মধ্য থেকে অথবা মানুষের মধ্য থেকে।</item>
    </string-array>
    <string-array name="sura_falak_aiyat">
        <item>(1)  قُلْ أَعُوذُ بِرَبِّ الْفَلَقِ</item>
        <item>(2)  مِن شَرِّ مَا خَلَقَ</item>
        <item>(3)  وَمِن شَرِّ غَاسِقٍ إِذَا وَقَبَ</item>
        <item>(4)  وَمِن شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ</item>
        <item>(5)  وَمِن شَرِّ حَاسِدٍ إِذَا حَسَدَ</item>
    </string-array>
    <string-array name="sura_falak_english_ortho">
        <item>Say: I seek refuge with the Lord of the Dawn</item>
        <item>From the mischief of created things;</item>
        <item>From the mischief of Darkness as it overspreads;</item>
        <item>From the mischief of those who practise secret arts;</item>
        <item>And from the mischief of the envious one as he practises envy.</item>
    </string-array>
    <string-array name="sura_falak_bangla_ortho">
        <item>বলুন, আমি আশ্রয় গ্রহণ করছি প্রভাতের পালনকর্তার,</item>
        <item>তিনি যা সৃষ্টি করেছেন, তার অনিষ্ট থেকে,</item>
        <item>অন্ধকার রাত্রির অনিষ্ট থেকে, যখন তা সমাগত হয়,</item>
        <item>	গ্রন্থিতে ফুঁৎকার দিয়ে জাদুকারিনীদের অনিষ্ট থেকে</item>
        <item>এবং হিংসুকের অনিষ্ট থেকে যখন সে হিংসা করে।</item>
    </string-array>
    <string-array name="sura_ikhlas_aiyat">
        <item>(1)  قُلْ هُوَ اللَّهُ أَحَدٌ</item>
        <item>(2)  اللَّهُ الصَّمَدُ</item>
        <item>(3)  لَمْ يَلِدْ وَلَمْ يُولَدْ</item>
        <item>(4)  وَلَمْ يَكُن لَّهُ كُفُوًا أَحَدٌ</item>
    </string-array>
    <string-array name="sura_ikhlas_english_ortho">
        <item>Say: He is Allah, the One and Only;</item>
        <item>Allah, the Eternal, Absolute;</item>
        <item>He begetteth not, nor is He begotten;</item>
        <item>And there is none like unto Him.</item>
    </string-array>
</resources>